@@ -1,1 +1,1 @@
-2.0.0rc1
+2.0.0rc2
