@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.86 2010/01/06 20:48:34 tho Exp $
+$Id: ChangeLog,v 1.87 2010/01/08 11:12:53 tho Exp $
 
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
@@ -14,6 +14,7 @@ LibU 2.0.0
 	  also bring back to life --no_ipv6 and --no_unixsock configure flags; 
 	  new --no_sctp command line option to explicitly disable SCTP bits
 	- [pwd] use u_strtok instead of deprecated u_tokenize internally
+	- [array] u_array_set_ptr and u_array_get_ptr interfaces changed
 
 LibU 1.4.1
 	- [missing] u_va_copy added
